# changepoint-detector

./: .gitignore  DEVLOG.md  README.md  pyproject.toml
data/: aapl.csv
src/changepoint_detector/cli/: cli.py
src/changepoint_detector/modules/detection/: config.py  controller.py  entry.py  strategy.py
src/changepoint_detector/utils/: data_load.py
